api/kube/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telehealth-api
  namespace: telehealth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: telehealth-api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: telehealth-api
    spec:
      containers:
        - name: telehealth-api
          # image: ${DOCKERHUB_USERNAME}/telehealth_api:${IMAGE_TAG}
          image: mjebran/telehealth_api:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /api/health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
          livenessProbe:
            httpGet:
              path: /api/health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
