api/kube/db.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: telehealth-db-deployment
  namespace: telehealth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: telehealth-db
  template:
    metadata:
      labels:
        app: telehealth-db
    spec:
      containers:
        - name: telehealth-db
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-storage
            - mountPath: /docker-entrypoint-initdb.d
              name: schema-volume
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: telehealth-db-pvc
        - name: schema-volume
          configMap:
            name: postgres-schema

---

apiVersion: v1
kind: Service
metadata:
  name: telehealth-db-svc
  namespace: telehealth
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: telehealth-db
