api/kube/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: telehealth-api-service
  namespace: telehealth
spec:
  selector:
    app: telehealth-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: Cl
