api/kube/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: telehealth-api-ingress
  namespace: telehealth
spec:
  rules:
    - host: api.telehealth.duckdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: telehealth-api-service
                port:
                  number: 8080
